--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -29,8 +29,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu, macos]
-    runs-on: ${{ matrix.os }}-latest
+        os: [ubuntu-latest, macos-13]
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
       - name: Set up Go 1.18
@@ -41,6 +41,7 @@ jobs:
         if: runner.os == 'macos'
         run: |
           brew install docker
+          brew install colima
           colima start
 
           # For testcontainers to find the Colima socket
@@ -91,7 +92,7 @@ jobs:
           submodules: true
       - uses: actions/download-artifact@v2
         with:
-          name: test-tools-ubuntu
+          name: test-tools-ubuntu-latest
           path: test/plugins/dist
       - name: Setup Tools
         run: |
@@ -113,7 +114,7 @@ jobs:
     name: gin-macos
     needs:
       - build
-    runs-on: macos-latest
+    runs-on: macos-13
     timeout-minutes: 90
     steps:
       - uses: actions/checkout@v2
@@ -121,12 +122,17 @@ jobs:
           submodules: true
       - uses: actions/download-artifact@v2
         with:
-          name: test-tools-macos
+          name: test-tools-macos-13
           path: test/plugins/dist
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
       - name: Setup docker (missing on MacOS)
         if: runner.os == 'macos'
         run: |
           brew install docker docker-compose
+          brew install colima
           colima start
 
           # For testcontainers to find the Colima socket
