--- a/.github/workflows/skywalking-go.yaml
+++ b/.github/workflows/skywalking-go.yaml
@@ -47,9 +47,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu, macos, windows ]
+        os: [ ubuntu-latest, macos-13, windows-latest ]
         go-version: [ 1.18, 1.19 ]
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
       - name: Set up Go ${{ matrix.go-version }}
