feature: add support for iris
Signed-off-by: Alipebt <1160756683@qq.com>

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -86,6 +86,7 @@ jobs:
           - runtime_metrics
           - mux
           - grpc
+          - irisv12
     steps:
       - uses: actions/checkout@v2
         with:
