--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -87,6 +87,7 @@ jobs:
           - mux
           - grpc
           - irisv12
+          - fasthttp
     steps:
       - uses: actions/checkout@v2
         with:
