--- a/test/plugins/scenarios/fasthttp/plugin.yml
+++ b/test/plugins/scenarios/fasthttp/plugin.yml
@@ -17,10 +17,46 @@
 entry-service: http://${HTTP_HOST}:${HTTP_PORT}/consumer
 health-checker: http://${HTTP_HOST}:${HTTP_PORT}/health
 start-script: ./bin/startup.sh
-framework: go
+framework: github.com/valyala/fasthttp
 export-port: 8080
 support-version:
   - go: 1.17
+    framework:
+      - v20180529
+      - v0.1.0
+      - v1.0.0
+      - v1.10.0
+      - v1.20.0
+      - v1.30.0
+      - v1.40.0
+      - v1.50.0
   - go: 1.18
+    framework:
+      - v20180529
+      - v0.1.0
+      - v1.0.0
+      - v1.10.0
+      - v1.20.0
+      - v1.30.0
+      - v1.40.0
+      - v1.50.0
   - go: 1.19
+    framework:
+      - v20180529
+      - v0.1.0
+      - v1.0.0
+      - v1.10.0
+      - v1.20.0
+      - v1.30.0
+      - v1.40.0
+      - v1.50.0
   - go: 1.20
+    framework:
+      - v20180529
+      - v0.1.0
+      - v1.0.0
+      - v1.10.0
+      - v1.20.0
+      - v1.30.0
+      - v1.40.0
+      - v1.50.0
