--- a/test/plugins/scenarios/fasthttp/config/excepted.yml
+++ b/test/plugins/scenarios/fasthttp/config/excepted.yml
@@ -20,43 +20,24 @@ segmentItems:
     segments:
       - segmentId: not null
         spans:
-          - operationName: GET:http://localhost:8080/provider
+          - operationName: GET:http://service:8080/health
             parentSpanId: -1
             spanId: 0
             spanLayer: Http
             startTime: nq 0
             endTime: nq 0
-            componentId: 5019
-            isError: false
-            spanType: Exit
-            peer: localhost:8080
-            skipAnalysis: false
-            tags:
-              - {key: http.method, value: GET}
-              - {key: url, value: 'http://localhost:8080/provider'}
-              - {key: status_code, value: '200'}
-            refs:
-              - { parentEndpoint: 'http://localhost:8080/consumer', networkAddress: 'localhost:8080', refType: CrossProcess,
-                  parentSpanId: 1, parentTraceSegmentId: not null, parentServiceInstance: not null,
-                  parentService: http, traceId: not null }
-      - segmentId: not null
-        spans:
-          - operationName: GET:http://localhost:8080/provider
-            parentSpanId: 0
-            spanId: 1
-            spanLayer: Http
-            startTime: gt 0
-            endTime: gt 0
             componentId: 5020
             isError: false
             spanType: Entry
-            peer: localhost:8080
+            peer: ''
             skipAnalysis: false
             tags:
               - {key: http.method, value: GET}
-              - {key: url, value: 'http://localhost:8080/provider'}
+              - {key: url, value: 'http://service:8080/health'}
               - {key: status_code, value: '200'}
-          - operationName: GET:http://localhost:8080/consumer
+      - segmentId: not null
+        spans:
+          - operationName: GET:http://localhost:8080/provider
             parentSpanId: -1
             spanId: 0
             spanLayer: Http
@@ -69,7 +50,46 @@ segmentItems:
             skipAnalysis: false
             tags:
               - {key: http.method, value: GET}
-              - {key: url, value: 'http://localhost:8080/consumer'}
+              - {key: url, value: 'http://localhost:8080/provider'}
               - {key: status_code, value: '200'}
+            refs:
+              - { parentEndpoint: 'GET:http://localhost:8080/provider', networkAddress: 'localhost:8080',
+                  refType: CrossProcess, parentSpanId: 0, parentTraceSegmentId: not null,
+                  parentServiceInstance: not null, parentService: fasthttp,
+                  traceId: not null }
+      - segmentId: not null
+        spans:
+          - operationName: GET:http://localhost:8080/provider
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: gt 0
+            endTime: gt 0
+            componentId: 5019
+            isError: false
+            spanType: Exit
+            peer: localhost:8080
+            skipAnalysis: false
+            tags:
+              - {key: http.method, value: GET}
+              - {key: url, value: 'http://localhost:8080/provider'}
+              - {key: status_code, value: '200'}
+      - segmentId: not null
+        spans:
+          - operationName: GET:http://service:8080/consumer
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: Http
+            startTime: gt 0
+            endTime: gt 0
+            componentId: 5020
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: http.method, value: GET }
+              - { key: url, value: 'http://service:8080/consumer' }
+              - { key: status_code, value: '200' }
 meterItems: []
 logItems: []
