--- a/test/plugins/scenarios/fasthttp/config/excepted.yml
+++ b/test/plugins/scenarios/fasthttp/config/excepted.yml
@@ -53,15 +53,15 @@ segmentItems:
               - {key: url, value: 'http://localhost:8080/provider'}
               - {key: status_code, value: '200'}
             refs:
-              - { parentEndpoint: 'GET:http://localhost:8080/provider', networkAddress: 'localhost:8080',
-                  refType: CrossProcess, parentSpanId: 0, parentTraceSegmentId: not null,
+              - { parentEndpoint: 'GET:http://service:8080/consumer', networkAddress: 'localhost:8080',
+                  refType: CrossProcess, parentSpanId: 1, parentTraceSegmentId: not null,
                   parentServiceInstance: not null, parentService: fasthttp,
                   traceId: not null }
       - segmentId: not null
         spans:
           - operationName: GET:http://localhost:8080/provider
-            parentSpanId: -1
-            spanId: 0
+            parentSpanId: 0
+            spanId: 1
             spanLayer: Http
             startTime: gt 0
             endTime: gt 0
@@ -74,8 +74,6 @@ segmentItems:
               - {key: http.method, value: GET}
               - {key: url, value: 'http://localhost:8080/provider'}
               - {key: status_code, value: '200'}
-      - segmentId: not null
-        spans:
           - operationName: GET:http://service:8080/consumer
             parentSpanId: -1
             spanId: 0
