--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -88,6 +88,7 @@ jobs:
           - grpc
           - irisv12
           - trace-activation
+          - fasthttp
     steps:
       - uses: actions/checkout@v2
         with:
