--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -89,6 +89,7 @@ jobs:
           - irisv12
           - trace-activation
           - fasthttp
+          - fiber
     steps:
       - uses: actions/checkout@v2
         with:
