--- a/test/plugins/scenarios/discard-reporter/config/excepted.yml
+++ b/test/plugins/scenarios/discard-reporter/config/excepted.yml
@@ -1,5 +1,3 @@
-#!/bin/bash
-#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -16,28 +14,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-home="$(cd "$(dirname $0)";cd ..; pwd)"
-cd $home
-
-echo "Installing protoc"
-apt update && apt install -y protobuf-compiler
-go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28
-go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
-export PATH="$PATH:$(go env GOPATH)/bin"
-
-echo "building API"
-protoc -I=${home}/api --go_out=${home}/api --go-grpc_out=${home}/api ${home}/api/api.proto
-
-echo "building applications"
-CGO_ENABLED=0 go build ${GO_BUILD_OPTS} -o server ./grpc_server/server.go
-CGO_ENABLED=0 go build ${GO_BUILD_OPTS} -o client ./grpc_client/client.go
-
-
-echo "starting server"
-export SW_AGENT_NAME=grpc-server
-./server &
-sleep 2
-
-echo "starting client"
-export SW_AGENT_NAME=grpc-client
-./client
+segmentItems: []
