--- a/tools/go-agent/config/agent.default.yaml
+++ b/tools/go-agent/config/agent.default.yaml
@@ -32,6 +32,7 @@ agent:
     max_value_size: ${SW_AGENT_CORRELATION_MAX_VALUE_SIZE:128}
 
 reporter:
+  discard: ${SW_AGENT_REPORTER_DISCARD:false}
   grpc:
     # The gRPC server address of the backend service.
     backend_service: ${SW_AGENT_REPORTER_GRPC_BACKEND_SERVICE:127.0.0.1:11800}
