fix: users can not use async api in toolkit-trace
Signed-off-by: Alipebt <1160756683@qq.com>

--- a/test/plugins/scenarios/trace-activation/config/excepted.yml
+++ b/test/plugins/scenarios/trace-activation/config/excepted.yml
@@ -214,7 +214,10 @@ segmentItems:
             peer: ''
             skipAnalysis: false
             tags:
-              - { key: testAsyncInCrossGoroutine, value: success }
+              - { key: testAsyncTag, value: success }
+            logs:
+              - logEvent:
+                  - { key: testAsyncLog, value: success }
           - operationName: GET:/consumer
             parentSpanId: -1
             spanId: 0
