feature: add support for fiber (#133)

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -90,6 +90,7 @@ jobs:
           - trace-activation
           - fasthttp
           - discard-reporter
+          - fiber
     steps:
       - uses: actions/checkout@v2
         with:
