--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -34,6 +34,7 @@ header:
     - '.gitignore'
     - 'dist/LICENSE.tpl'
     - '**/*.tmpl'
+    - 'tools/go-agent/tools/testdata/*'
 
   comment: on-failure
 
