Fix macOS CI Testing (#157)

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -39,6 +39,10 @@ jobs:
           go-version: 1.18
       - name: Setup docker (missing on MacOS)
         if: runner.os == 'macos'
+        env:
+          HOMEBREW_NO_AUTO_UPDATE: "1"
+          HOMEBREW_NO_INSTALL_UPGRADE: "1"
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: "1"
         run: |
           brew install docker
           brew install colima
@@ -135,6 +139,10 @@ jobs:
           go-version: 1.18
       - name: Setup docker (missing on MacOS)
         if: runner.os == 'macos'
+        env:
+          HOMEBREW_NO_AUTO_UPDATE: "1"
+          HOMEBREW_NO_INSTALL_UPGRADE: "1"
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: "1"
         run: |
           brew install docker docker-compose
           brew install colima
