--- a/test/plugins/scenarios/amqp/config/excepted.yml
+++ b/test/plugins/scenarios/amqp/config/excepted.yml
@@ -16,25 +16,8 @@
 
 segmentItems:
   - serviceName: amqp
-    segmentSize: ge 3
+    segmentSize: ge 2
     segments:
-      - segmentId: not null
-        spans:
-          - operationName: GET:/health
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: Http
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 5004
-            isError: false
-            spanType: Entry
-            peer: ''
-            skipAnalysis: false
-            tags:
-              - {key: http.method, value: GET}
-              - {key: url, value: 'service:8080/health'}
-              - {key: status_code, value: '200'}
       - segmentId: not null
         spans:
           - operationName: Amqp/sw-exchange/sw-key/Producer
@@ -84,5 +67,9 @@ segmentItems:
               - {key: mq.broker, value: 'amqp-server:5672'}
               - {key: mq.queue, value: 'sw-queue'}
               - {key: mq.consumer, value: 'sw-consumer'}
+            refs:
+              - {parentEndpoint: 'Amqp/sw-exchange/sw-key/Producer', networkAddress: 'localhost:8080', refType: CrossProcess,
+                 parentSpanId: 1, parentTraceSegmentId: not null, parentServiceInstance: not null,
+                 parentService: amqp-server, traceId: not null}
 meterItems: []
 logItems: []
