--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -96,6 +96,7 @@ jobs:
           - discard-reporter
           - fiber
           - echov4
+          - rocketMQ
     steps:
       - uses: actions/checkout@v2
         with:
